Version Next

    - Added "-C" flag to Nagios plugin (issue #28).

Version 1.0.14 Released June 24, 2016

    - Fix bug where `-T' suppressed everything when used with `-p'
    - Fix bug where `-T' would also count negative patterns
    - Fix segfault parsing `-T' in certain cases

Version 1.0.13 Released June 19, 2016

    - Added `-T num/secs' for frequency filtering

Version 1.0.12 Released May 24, 2016

    - Added note to man page that the default behavior is to match
    - Fix substitution for @BASH_SHELL@ in check_logwarn script
    - Moved project hosing from Google code to GitHub
    - Added `-R' flag (issue #24)

Version 1.0.11 (r115) Released January 12, 2014

    - Added `-l' flag (contributed by Tobias Galitzien)
    - Added `-c' flag for case-insensitive matching (issue #19)
    - Added `-N' flag to limit messages processed (issue #17)

Version 1.0.10 (r104) Released November 25, 2012

    - Added `-M' and `-L' command line flags
    - Added `-F' flag to Nagios plugin

Version 1.0.9 (r95) Released November 9, 2012

    - Add support for rotated logs that are xz(1) compressed
    - Plugin: exit UNKNOWN instead of CRITICAL if can't create temp file
    - Plugin: add support for '-h' command line flag
    - Plugin: fix unportable sed(1) usage
    - Plugin: omit alert level from status message

Version 1.0.8 (r88) Released April 7, 2012

    - Properly handle truncated files (issue #7)
    - Portability fixes for Solaris

Version 1.0.7 (r80) Released November 10, 2011

    - Add large file support (issue #3)

Version 1.0.6 (r72) Released October 4, 2011

    - Fix misuse of '|' character in Nagios plugin output

Version 1.0.5 (r64) Released September 15, 2011

    - Added the ability to scan standard input
    - Added `-z' flag to always read from the beginning

Version 1.0.4 (r57) Released August 18, 2011

    - Fixed a bug when file is less than three bytes long (issue #2)
    - Added some examples to the man page
